--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "drizzle-orm": "^0.30.9",
     "lucide": "^0.375.0",
     "lucide-react": "^0.374.0",
+    "mysql2": "^3.11.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.3.0",
